gcc/testsuite/g++.dg/ext/complit17.C
@@ -1,0 +1,4 @@
+// PR c++/53220
+// { dg-options "" }
+
+int* f() { return (int[]){42}; } // { dg-warning "pointer to temporary" }
